--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,18 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+    margin: 0;
+  }
+
+.center-me {
+    margin: 0 auto;
+    background: white;  /*Gray Backgorund to make the div visible */ 
+    width: 200px;  /*This should be the max-widh of your website*/ 
+    display: inlinr-block;
+   
+  }
+.lista{
+margin-top: 50px
+
+}
