--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,17 +1,6 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
 body{
     margin: 0;
+    background: white
   }
 
 .center-me {
@@ -21,7 +10,14 @@ body{
     display: inlinr-block;
    
   }
-.lista{
+
+  h1 {
+    color: rgb(67, 164, 216);
+}
+
+
+
+/* .lista{
 margin-top: 50px
 
-}
+} */
